--- a/client/css/main.css
+++ b/client/css/main.css
@@ -45,7 +45,7 @@ img.pure-img-responsive {
 }
 
 /* -- LAYOUT STYLES -- */
-.hidden {
+.hide {
   display: none;
 }
 
@@ -370,10 +370,6 @@ blockquote {
   margin-bottom: 1.5em;
 }
 
-#speak_with_remove_criteria {
-  display: none;
-}
-
 /* -- MATERIAL FORM -- */
 
 fieldset {
@@ -689,6 +685,9 @@ fieldset {
   transition: background-color 0.28s ease, color 0.28s ease, box-shadow 0.28s ease;
   overflow: hidden;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+.button.tight {
+  padding: 0.75em 1.5em;
 }
 .button span {
   color: #fff;
