--- a/client/css/main.css
+++ b/client/css/main.css
@@ -382,7 +382,7 @@ fieldset {
 .form-radio,
 .form-group {
   position: relative;
-  margin-top: .5em;
+  margin-top: 1.25em;
   margin-bottom: .5em;
 }
 
