--- a/client/css/main.css
+++ b/client/css/main.css
@@ -55,6 +55,9 @@ img.pure-img-responsive {
 .no-margin {
   margin: 0;
 }
+.no-top-margin {
+  margin-top: 0;
+}
 .content .extra-bottom-margin {
   margin-bottom: 3em;
 }
