Properly handle user data

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -343,6 +343,7 @@ blockquote {
 }
 
 .required:after,
+[required] > span.label:after,
 [required] > legend:after,
 [required]> label:after {
   content: '*';
